# dxlib

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MIT-LICENSE.txt  README.md  ROADMAP.md  Roadmap.md  requirements.txt  setup.py  upload.sh  upload_lib.sh
.github/workflows/: publish-package.yml  publish-prod-package.yml  publish-test-packages.yml  python-publish.yml
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  requirements.txt
docs/source/: conf.py  custom_sidebar.html  index.rst  quickstart.rst
dxlib/: Trabalho_3_SSC0964.ipynb  __init__.py  app.py  logger.py  portfolio_theory_module.py  test.py
dxlib/Indicators/: indicators.py
dxlib/_src/: .gitignore  CMakeLists.txt
dxlib/_src/core/: CMakeLists.txt  cash_flow.c  cash_flow.h  portfolio.c  portfolio.h
dxlib/_src/tests/: test_portfolio.c
dxlib/api/: __init__.py  __main__.py  alpaca_markets.py  alpha_vantage.py  core.py  data_api.py  logger.py  terminal.py  yfinance.py
dxlib/core/: __init__.py  history.py  logger.py  manager.py  options.py  portfolio.py  security.py  serializer.py  utils.py
dxlib/data/: __init__.py  endpoint.py
dxlib/db/: __init__.py
dxlib/interfaces/: __init__.py  data_api.py  executor.py  interface.py  interfaces.py  utils.py
dxlib/managers/: __init__.py  connector.py  feed_manager.py  generic_manager.py  handler.py  interface_manager.py  manager.py  simulation_manager.py  strategy_manager.py
roadmap/: README.md
tests/: allocation_strategy.ipynb  executor.py  my_strategy.py  sandbox-market.py  systematic_trading.ipynb  time_series_analysis.ipynb
(+164 files in other folders)
